# agent-repair-search

./: .env.example  .gitignore  AGENTS.md  LICENSE  PLANS.md  README.md  pyproject.toml
docs/outreach/: mettle_repair_strategy_selection.html
evals/: heldout.jsonl  optimize.jsonl  optimize_train.jsonl  regression.jsonl
experiments/: run_comparison.py
reports/: benchmark_readiness.json  benchmark_readiness.md  final_experiment.json  final_experiment.md  scenario_selection.json  scenario_selection.md
scenarios/cancel_refund_sanity/: optimize_val.jsonl  regression_dev.jsonl  regression_final.jsonl  scenario.json  system_prompt.md  tools.json
scenarios/stateful_account_resolution/: composition.json  heldout.jsonl  optimize_train.jsonl  optimize_val.jsonl  policy_precedence.md  regression_dev.jsonl  regression_final.jsonl  scenario.json  system_prompt.md  tools.json
scenarios/subscription_billing_ambiguity/: composition.json  heldout.jsonl  optimize_train.jsonl  optimize_val.jsonl  regression_dev.jsonl  regression_final.jsonl  scenario.json  system_prompt.md  tools.json
scripts/: _gen_tail.py  finish_sar_generation.py  generate_stateful_account_resolution.py
src/agent_repair/: __init__.py  agent.py  anthropic_client.py  artifacts.py  cli.py  config.py  datasets.py  models.py  (+7 more)
tests/: test_artifacts.py  test_characterize.py  test_cli_limits.py  test_datasets.py  test_evaluator.py  test_gepa_adapter.py  test_gepa_shapes.py  test_model_roles.py  test_pipeline_isolation.py  test_registry.py  test_scenarios.py  test_smoke.py  test_temperature.py  test_viability.py
(+29 files in other folders)
